--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.5.0",
     "@reduxjs/toolkit": "^1.5.0",
     "antd": "^4.13.1",
+    "dayjs": "^1.10.4",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
