--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "antd": "^4.13.1",
     "dayjs": "^1.10.4",
+    "js-cookie": "^2.2.1",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
